--- a/index.html
+++ b/index.html
@@ -39,19 +39,98 @@
         </div>
       </div>
     </header>
-    <div class="features">
-      <div class="row">
-        <div class="text-col">
-          <h2>Enjoy on your TV.</h2>
-          <p>
-            Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray
-            players and more.
-          </p>
+    <main>
+      <section>
+        <div class="features">
+          <div class="row">
+            <div class="text-col">
+              <h2>Enjoy on your TV.</h2>
+              <p>
+                Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
+                Blu-ray players and more.
+              </p>
+            </div>
+            <div class="img-col">
+              <img src="images/feature-1.png" alt="" />
+            </div>
+          </div>
         </div>
-        <div class="img-col">
-          <img src="images/feature-1.png" alt="" />
+      </section>
+
+      <section>
+        <div class="features">
+          <div class="row">
+            <div class="img-col">
+              <img src="images/feature-2.png" alt="" />
+            </div>
+            <div class="text-col">
+              <h2>Enjoy on your TV.</h2>
+              <p>
+                Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
+                Blu-ray players and more.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
+      </section>
+      <section>
+        <div class="features">
+          <div class="row">
+            <div class="text-col">
+              <h2>Enjoy on your TV.</h2>
+              <p>
+                Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
+                Blu-ray players and more.
+              </p>
+            </div>
+            <div class="img-col">
+              <img src="images/feature-3.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="accordion">
+          <div class="accordiontitle">
+            <label for="section1">Section 1 <span>&plus;</span></label>
+            <input type="radio" name="accordion" id="section1" />
+            <div class="accordion_content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+                quae nisi laudantium corrupti soluta at ab eveniet blanditiis
+                molestiae. Asperiores ipsa maxime voluptates fugiat eius
+                provident, at recusandae delectus repudiandae!
+              </p>
+            </div>
+          </div>
+
+          <div class="accordiontitle">
+            <label for="section2">Section 1 <span>&plus;</span></label>
+            <input type="radio" name="accordion" id="section2" />
+            <div class="accordion_content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+                quae nisi laudantium corrupti soluta at ab eveniet blanditiis
+                molestiae. Asperiores ipsa maxime voluptates fugiat eius
+                provident, at recusandae delectus repudiandae!
+              </p>
+            </div>
+          </div>
+
+          <div class="accordiontitle">
+            <label for="section3">Section 1 <span>&plus;</span></label>
+            <input type="radio" name="accordion" id="section3" />
+            <div class="accordion_content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+                quae nisi laudantium corrupti soluta at ab eveniet blanditiis
+                molestiae. Asperiores ipsa maxime voluptates fugiat eius
+                provident, at recusandae delectus repudiandae!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
